--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="idade-box">
                     <label for="idade" id="idadelab">idade</label>
-                    <input name="idade" type="text" placeholder="Sua idade" id="idade">
+                    <input name="idade" type="number" placeholder="Sua idade" id="idade">
                 </div>
                 
                 <button type="submit" id="btn">fazer cadastro</button>
